fix no line-break for tags in post-meta causing horizontal scroll on mobile

--- a/themes/casper/static/css/screen.css
+++ b/themes/casper/static/css/screen.css
@@ -1174,7 +1174,7 @@ body:not(.post-template) .post-title {
 .post-meta {
     display: block;
     margin: 1.75rem 0 0 0;
-    font-family: "Open Sans", sans-serif;
+    font-family: monospace;
     font-size: 1.5rem;
     line-height: 2.2rem;
     color: #9EABB3;
@@ -1211,6 +1211,14 @@ body:not(.post-template) .post-title {
 
     font-size: 1.3rem;
     white-space: nowrap;
+}
+
+.post-tags a {
+    color: #E0E0E0;
+}
+
+.post-tags a:hover {
+    color: #ac393f;
 }
 
 
